# PBL-1

./: GEMINI.md  Patent_Report.md  pyproject.toml
BackEnd/: User.py  customData.py  dataProcessing.py  dataProcessing2.py  encrypt.py  main.py
BackEnd/DataSets/CustomDataSet/: a_a_com_dataset.xlsx
DataSets/: dataSet1.xlsx  dataSet1_cleaned.xlsx
FrontEnd/: Footer.html  Home.html  LogIn.html  Nav.html  SignUp.html  customData.html  index.html  script.js  style.css
