[project]
name = "pybackend1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic[email]>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.26",
    "seaborn>=0.13.2",
    "uvicorn>=0.42.0",
]
